@@ -20,6 +20,7 @@ type error =
   | Variable_in_scope of Location.t * string
   | Other of Location.t
   | Ill_formed_ast of Location.t * string
+  | Invalid_package_type of Location.t * string
 
 exception Error of error
 exception Escape_error
@@ -54,6 +55,8 @@ let prepare_error = function
       Location.errorf_prefixed ~loc "Syntax error"
   | Ill_formed_ast (loc, s) ->
       Location.errorf_prefixed ~loc "broken invariant in parsetree: %s" s
+  | Invalid_package_type (loc, s) ->
+      Location.errorf_prefixed ~loc "invalid package type: %s" s
 
 let () =
   Location.register_error_of_exn
@@ -73,6 +76,7 @@ let location_of_error = function
   | Other l
   | Not_expecting (l, _)
   | Ill_formed_ast (l, _)
+  | Invalid_package_type (l, _)
   | Expecting (l, _) -> l
 
 
